ui overflowing bug solved

--- a/src/output.css
+++ b/src/output.css
@@ -912,16 +912,12 @@ video {
   margin: auto;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .ml-10 {
@@ -940,14 +936,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[3rem\] {
-  margin-top: 3rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -958,10 +946,6 @@ video {
 
 .h-1 {
   height: 0.25rem;
-}
-
-.h-1\/2 {
-  height: 50%;
 }
 
 .h-12 {
@@ -1016,8 +1000,12 @@ video {
   height: 100vh;
 }
 
-.h-\[50\%\] {
-  height: 50%;
+.max-h-\[400px\] {
+  max-height: 400px;
+}
+
+.min-h-\[50\%\] {
+  min-height: 50%;
 }
 
 .w-1 {
@@ -1036,20 +1024,12 @@ video {
   width: 24rem;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
 .w-\[150px\] {
   width: 150px;
 }
 
 .w-\[200\%\] {
   width: 200%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
 }
 
 .w-auto {
@@ -1091,8 +1071,20 @@ video {
   resize: both;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1111,8 +1103,8 @@ video {
   gap: 2rem;
 }
 
-.gap-\[2rem\] {
-  gap: 2rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1143,11 +1135,6 @@ video {
 
 .border-black\/\[0\.1\] {
   border-color: rgb(0 0 0 / 0.1);
-}
-
-.bg-\[\#F5F5F5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F7FBFC\] {
@@ -1217,13 +1204,14 @@ video {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-14 {
-  padding: 3.5rem;
 }
 
 .p-2 {
@@ -1236,6 +1224,10 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -1253,11 +1245,6 @@ video {
   padding-right: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1268,24 +1255,16 @@ video {
   padding-bottom: 5rem;
 }
 
+.text-\[\.8rem\] {
+  font-size: .8rem;
+}
+
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
 }
 
-.text-\[1rem\] {
-  font-size: 1rem;
-}
-
-.text-\[2\.1rem\] {
-  font-size: 2.1rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
-}
-
-.text-\[6rem\] {
-  font-size: 6rem;
+.text-\[3rem\] {
+  font-size: 3rem;
 }
 
 .text-sm {
@@ -1303,12 +1282,19 @@ video {
   line-height: 1rem;
 }
 
-.text-\[3rem\] {
-  font-size: 3rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
-.text-\[\.8rem\] {
-  font-size: .8rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1325,11 +1311,6 @@ video {
 
 .italic {
   font-style: italic;
-}
-
-.text-\[\#1E212D\] {
-  --tw-text-opacity: 1;
-  color: rgb(30 33 45 / var(--tw-text-opacity));
 }
 
 .text-\[\#444444\] {
@@ -1370,10 +1351,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[1\.5\] {
-  color: 1.5;
 }
 
 .opacity-0 {
@@ -1631,6 +1608,11 @@ html,body {
   .md\:h-\[40rem\] {
     height: 40rem;
   }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1642,16 +1624,24 @@ html,body {
     height: 100%;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:w-\[50\%\] {
     width: 50%;
   }
 
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:w-\[150px\] {
+    width: 150px;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 
   .lg\:p-14 {
@@ -1662,12 +1652,32 @@ html,body {
     font-size: 1.5rem;
   }
 
+  .lg\:text-\[2\.1rem\] {
+    font-size: 2.1rem;
+  }
+
   .lg\:text-\[6rem\] {
     font-size: 6rem;
   }
 
-  .lg\:text-\[2\.1rem\] {
-    font-size: 2.1rem;
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
   }
 }
 
